--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "reactivation_1",
+  "name": "ghk_4120_1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base=/reactivation_1/",
+    "build": "tsc && vite build --base=/ghk_4120_1/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
